--- a/index.html
+++ b/index.html
@@ -160,6 +160,23 @@
       margin-bottom: 1rem;
       font-size: 0.875rem;
     }
+    video, canvas {
+      width: 100%;
+      border-radius: 0.5rem;
+      margin-bottom: 1rem;
+    }
+    .crop-container {
+      position: relative;
+      display: inline-block;
+    }
+    .crop-handle {
+      position: absolute;
+      width: 12px;
+      height: 12px;
+      background: #2563eb;
+      border-radius: 50%;
+      cursor: pointer;
+    }
     @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
@@ -182,11 +199,16 @@
       service: null,
       file: null,
       fileUploaded: false,
+      scanMode: false,
+      imageData: null,
+      crop: { x: 0, y: 0, width: 0, height: 0 },
       copies: 1,
       color: 'bw',
       totalCost: 0,
       error: ''
     };
+
+    let videoStream = null;
 
     // Render function
     function render() {
@@ -195,37 +217,73 @@
       if (state.screen === 'menu') {
         app.innerHTML = `
           <h1>Internet Cafe Machine</h1>
-          <button class="btn-blue" onclick="selectService('print')">Print</button>
-          <button class="btn-blue" onclick="selectService('copy')">Copy</button>
-          <button class="btn-blue" onclick="selectService('scan')">Scan</button>
+          <button class="btn-blue" onclick="selectService('print')" aria-label="Select Print Service">Print</button>
+          <button class="btn-blue" onclick="selectService('copy')" aria-label="Select Copy Service">Copy</button>
+          <button class="btn-blue" onclick="selectService('scan')" aria-label="Select Scan Service">Scan</button>
         `;
       } else if (state.screen === 'options') {
         app.innerHTML = `
           <h2 class="capitalize">${state.service} Options</h2>
           ${state.service === 'print' ? `
-            <div class="form-group">
-              <label>Upload File:</label>
-              <input type="file" accept=".pdf,.doc,.docx,.txt" onchange="handleFileSelect(this)">
-            </div>
+            ${state.scanMode ? `
+              <div class="form-group">
+                <label>Camera Preview:</label>
+                <video id="video" autoplay playsinline></video>
+                <div class="flex">
+                  <button class="btn-blue" onclick="captureImage()" aria-label="Capture Image">Capture</button>
+                  <button class="btn-gray" onclick="stopCamera()" aria-label="Stop Camera">Cancel</button>
+                </div>
+              </div>
+            ` : state.imageData ? `
+              <div class="form-group">
+                <label>Captured Image:</label>
+                <div class="crop-container">
+                  <canvas id="canvas"></canvas>
+                  <div class="crop-handle" id="top-left" style="top: ${state.crop.y}px; left: ${state.crop.x}px;"></div>
+                  <div class="crop-handle" id="bottom-right" style="top: ${state.crop.y + state.crop.height}px; left: ${state.crop.x + state.crop.width}px;"></div>
+                </div>
+                <div class="flex">
+                  <button class="btn-blue" onclick="confirmCrop()" aria-label="Confirm Crop">Confirm</button>
+                  <button class="btn-gray" onclick="retakeImage()" aria-label="Retake Image">Retake</button>
+                </div>
+              </div>
+            ` : `
+              <div class="form-group">
+                <label>Choose Input Method:</label>
+                <div class="flex">
+                  <button class="btn-blue" onclick="startCamera()" aria-label="Scan Document with Camera">Scan Document</button>
+                  <button class="btn-blue" onclick="triggerFileUpload()" aria-label="Upload File">Upload File</button>
+                </div>
+                <input type="file" id="fileInput" accept=".pdf,.doc,.docx,.txt,.jpg,.png" style="display: none;" onchange="handleFileSelect(this)">
+              </div>
+            `}
           ` : ''}
           ${state.service !== 'scan' && (state.service !== 'print' || state.fileUploaded) ? `
             <div class="form-group">
               <label>Number of Copies:</label>
-              <input type="number" id="copies" value="${state.copies}" min="1" onchange="updateCopies(this.value)">
+              <input type="number" id="copies" value="${state.copies}" min="1" onchange="updateCopies(this.value)" aria-label="Number of Copies">
             </div>
             <div class="form-group">
               <label>Color:</label>
-              <select id="color" onchange="updateColor(this.value)">
+              <select id="color" onchange="updateColor(this.value)" aria-label="Color Option">
                 <option value="bw" ${state.color === 'bw' ? 'selected' : ''}>Black & White</option>
                 <option value="color" ${state.color === 'color' ? 'selected' : ''}>Color</option>
               </select>
             </div>
           ` : ''}
-          <div class="flex">
-            <button class="btn-gray" onclick="setScreen('menu')">Back</button>
-            <button class="btn-green" onclick="confirmTransaction()">Confirm</button>
-          </div>
+          ${state.service !== 'print' || !state.scanMode && !state.imageData ? `
+            <div class="flex">
+              <button class="btn-gray" onclick="setScreen('menu')" aria-label="Back to Menu">Back</button>
+              <button class="btn-green" onclick="confirmTransaction()" aria-label="Confirm Transaction">Confirm</button>
+            </div>
+          ` : ''}
         `;
+        if (state.service === 'print' && state.scanMode) {
+          startVideoStream();
+        } else if (state.service === 'print' && state.imageData) {
+          drawCanvas();
+          setupCropHandles();
+        }
       } else if (state.screen === 'summary') {
         app.innerHTML = `
           <h2>Transaction Summary</h2>
@@ -235,10 +293,10 @@
             <p><strong>Color:</strong> ${state.color === 'bw' ? 'Black & White' : 'Color'}</p>
           ` : ''}
           ${state.service === 'print' ? `
-            <p><strong>File:</strong> ${state.file || 'None'}</p>
+            <p><strong>File:</strong> ${state.file || 'Scanned Image'}</p>
           ` : ''}
           <p><strong>Total Cost:</strong> R${state.totalCost}</p>
-          <button class="btn-blue" onclick="reset()">Complete Transaction</button>
+          <button class="btn-blue" onclick="reset()" aria-label="Complete Transaction">Complete Transaction</button>
         `;
       }
 
@@ -255,7 +313,7 @@
                 <span class="alert-title">Error</span>
               </div>
               <p class="alert-message">${state.error}</p>
-              <button class="btn-blue" onclick="clearError()">Close</button>
+              <button class="btn-blue" onclick="clearError()" aria-label="Close Alert">Close</button>
             </div>
           `;
           document.body.appendChild(alertContainer);
@@ -263,11 +321,136 @@
       }
     }
 
+    // Camera functions
+    function startCamera() {
+      if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+        state.error = 'Camera access is not supported in this browser or context.';
+        render();
+        return;
+      }
+      state.scanMode = true;
+      state.imageData = null;
+      state.file = null;
+      state.fileUploaded = false;
+      render();
+    }
+
+    function startVideoStream() {
+      navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } })
+        .then(stream => {
+          videoStream = stream;
+          const video = document.getElementById('video');
+          if (video) {
+            video.srcObject = stream;
+          }
+        })
+        .catch(() => {
+          state.error = 'Failed to access camera. Please grant permission or check device.';
+          state.scanMode = false;
+          render();
+        });
+    }
+
+    function stopCamera() {
+      if (videoStream) {
+        videoStream.getTracks().forEach(track => track.stop());
+        videoStream = null;
+      }
+      state.scanMode = false;
+      render();
+    }
+
+    function captureImage() {
+      const video = document.getElementById('video');
+      if (!video) return;
+      const canvas = document.createElement('canvas');
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
+      state.imageData = canvas.toDataURL('image/png');
+      state.crop = { x: 50, y: 50, width: canvas.width - 100, height: canvas.height - 100 };
+      stopCamera();
+      render();
+    }
+
+    function drawCanvas() {
+      const canvas = document.getElementById('canvas');
+      if (!canvas) return;
+      const ctx = canvas.getContext('2d');
+      const img = new Image();
+      img.src = state.imageData;
+      img.onload = () => {
+        canvas.width = img.width;
+        canvas.height = img.height;
+        ctx.drawImage(img, 0, 0);
+        ctx.strokeStyle = '#2563eb';
+        ctx.lineWidth = 2;
+        ctx.strokeRect(state.crop.x, state.crop.y, state.crop.width, state.crop.height);
+      };
+    }
+
+    function setupCropHandles() {
+      const handles = ['top-left', 'bottom-right'];
+      handles.forEach(handle => {
+        const element = document.getElementById(handle);
+        if (!element) return;
+        let isDragging = false;
+        element.addEventListener('mousedown', () => { isDragging = true; });
+        document.addEventListener('mousemove', (e) => {
+          if (!isDragging) return;
+          const canvas = document.getElementById('canvas');
+          const rect = canvas.getBoundingClientRect();
+          const x = e.clientX - rect.left;
+          const y = e.clientY - rect.top;
+          if (handle === 'top-left') {
+            state.crop.width += state.crop.x - x;
+            state.crop.height += state.crop.y - y;
+            state.crop.x = Math.max(0, x);
+            state.crop.y = Math.max(0, y);
+          } else if (handle === 'bottom-right') {
+            state.crop.width = Math.min(x - state.crop.x, canvas.width - state.crop.x);
+            state.crop.height = Math.min(y - state.crop.y, canvas.height - state.crop.y);
+          }
+          state.crop.width = Math.max(50, state.crop.width);
+          state.crop.height = Math.max(50, state.crop.height);
+          drawCanvas();
+        });
+        document.addEventListener('mouseup', () => { isDragging = false; });
+      });
+    }
+
+    function confirmCrop() {
+      const canvas = document.createElement('canvas');
+      canvas.width = state.crop.width;
+      canvas.height = state.crop.height;
+      const ctx = canvas.getContext('2d');
+      const img = new Image();
+      img.src = state.imageData;
+      img.onload = () => {
+        ctx.drawImage(img, state.crop.x, state.crop.y, state.crop.width, state.crop.height, 0, 0, state.crop.width, state.crop.height);
+        state.imageData = canvas.toDataURL('image/png');
+        state.file = 'scanned_image.png';
+        state.fileUploaded = true;
+        render();
+      };
+    }
+
+    function retakeImage() {
+      state.imageData = null;
+      state.crop = { x: 0, y: 0, width: 0, height: 0 };
+      startCamera();
+    }
+
     // State update functions
     function setScreen(screen) {
       state.screen = screen;
       state.error = '';
-      // Remove any existing alert overlay
+      state.scanMode = false;
+      state.imageData = null;
+      if (videoStream) {
+        videoStream.getTracks().forEach(track => track.stop());
+        videoStream = null;
+      }
       const existingAlert = document.querySelector('.alert-overlay');
       if (existingAlert) existingAlert.remove();
       render();
@@ -277,10 +460,11 @@
       state.service = service;
       state.file = null;
       state.fileUploaded = false;
+      state.scanMode = false;
+      state.imageData = null;
       state.copies = 1;
       state.color = 'bw';
       state.error = '';
-      // Remove any existing alert overlay
       const existingAlert = document.querySelector('.alert-overlay');
       if (existingAlert) existingAlert.remove();
       setScreen('options');
@@ -296,11 +480,15 @@
       render();
     }
 
+    function triggerFileUpload() {
+      document.getElementById('fileInput').click();
+    }
+
     function handleFileSelect(input) {
       state.file = input.files[0]?.name || 'sample.pdf';
       state.fileUploaded = true;
+      state.imageData = null;
       state.error = '';
-      // Remove any existing alert overlay
       const existingAlert = document.querySelector('.alert-overlay');
       if (existingAlert) existingAlert.remove();
       render();
@@ -320,11 +508,18 @@
 
     function confirmTransaction() {
       if (state.service === 'print' && !state.fileUploaded) {
-        state.error = 'Please upload a file before proceeding.';
+        state.error = 'Please upload a file or scan a document before proceeding.';
         render();
         return;
       }
       calculateCost();
+      if (state.service === 'print' && state.imageData) {
+        console.log('Printing:', {
+          image: state.imageData,
+          copies: state.copies,
+          color: state.color
+        });
+      }
       setScreen('summary');
     }
 
@@ -341,12 +536,18 @@
         service: null,
         file: null,
         fileUploaded: false,
+        scanMode: false,
+        imageData: null,
+        crop: { x: 0, y: 0, width: 0, height: 0 },
         copies: 1,
         color: 'bw',
         totalCost: 0,
         error: ''
       };
-      // Remove any existing alert overlay
+      if (videoStream) {
+        videoStream.getTracks().forEach(track => track.stop());
+        videoStream = null;
+      }
       const existingAlert = document.querySelector('.alert-overlay');
       if (existingAlert) existingAlert.remove();
       render();
