--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       font-weight: 500;
       transition: all 0.3s ease;
       transform: scale(1);
+      margin: 0.5rem;
     }
     button:hover {
       transform: scale(1.05);
@@ -211,22 +212,29 @@
   <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-database.js"></script>
   <script>
-    // Firebase configuration (replace with your project's config)
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyBOyZ3As4GTuNvjemvPF_SpsC6m6vqtNhc",
-  authDomain: "fire-b-a8878.firebaseapp.com",
-  databaseURL: "https://fire-b-a8878.firebaseio.com",
-  projectId: "fire-b-a8878",
-  storageBucket: "fire-b-a8878.firebasestorage.app",
-  messagingSenderId: "658673187627",
-  appId: "1:658673187627:web:32699cbc33e85f4bafa36e",
-  measurementId: "G-2505EVBRWX"
-};
+    // Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyBOyZ3As4GTuNvjemvPF_SpsC6m6vqtNhc",
+      authDomain: "fire-b-a8878.firebaseapp.com",
+      databaseURL: "https://fire-b-a8878.firebaseio.com",
+      projectId: "fire-b-a8878",
+      storageBucket: "fire-b-a8878.firebasestorage.app",
+      messagingSenderId: "658673187627",
+      appId: "1:658673187627:web:32699cbc33e85f4bafa36e",
+      measurementId: "G-2505EVBRWX"
+    };
 
     // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
+    let db;
+    try {
+      firebase.initializeApp(firebaseConfig);
+      db = firebase.database();
+      console.log('Firebase initialized successfully');
+    } catch (error) {
+      console.error('Firebase initialization failed:', error);
+      state.error = 'Failed to connect to server. Please check your configuration.';
+      render();
+    }
 
     // Pricing constants in ZAR
     const PRICING = {
@@ -255,7 +263,12 @@ const firebaseConfig = {
 
     // Render function
     function render() {
+      console.log('Rendering screen:', state.screen);
       const app = document.getElementById('app');
+      if (!app) {
+        console.error('App container not found');
+        return;
+      }
       app.innerHTML = '';
       if (state.screen === 'menu') {
         app.innerHTML = `
@@ -263,6 +276,7 @@ const firebaseConfig = {
           <button class="btn-blue" onclick="selectService('print')" aria-label="Select Print Service">Print</button>
           <button class="btn-gray" onclick="showAdminLogin()" aria-label="Admin Login">Admin Login</button>
         `;
+        console.log('Main menu rendered with Print and Admin Login buttons');
       } else if (state.screen === 'admin_login') {
         app.innerHTML = `
           <h2>Admin Login</h2>
@@ -281,7 +295,7 @@ const firebaseConfig = {
           <div id="adminJobs"></div>
           <button class="btn-gray" onclick="setScreen('menu')" aria-label="Back to Menu">Logout</button>
         `;
-        loadAdminJobs();
+        if (db) loadAdminJobs();
       } else if (state.screen === 'options') {
         app.innerHTML = `
           <h2>Print Options</h2>
@@ -381,10 +395,16 @@ const firebaseConfig = {
           document.body.appendChild(alertContainer);
         }
       }
+      console.log('DOM updated:', app.innerHTML); // Debug DOM content
     }
 
     // Firebase functions
     function sendToAdmin() {
+      if (!db) {
+        state.error = 'Server connection not available.';
+        render();
+        return;
+      }
       const job = {
         service: state.service,
         file: state.file,
@@ -396,7 +416,8 @@ const firebaseConfig = {
         timestamp: firebase.database.ServerValue.TIMESTAMP
       };
       const newJobRef = db.ref('jobs').push();
-      newJobRef.set(job).catch(() => {
+      newJobRef.set(job).catch((error) => {
+        console.error('Failed to submit job:', error);
         state.error = 'Failed to submit job to server. Please try again.';
         render();
       });
@@ -407,6 +428,7 @@ const firebaseConfig = {
     }
 
     function listenForJobStatus() {
+      if (!db) return;
       if (jobListener) jobListener.off();
       jobListener = db.ref(`jobs/${state.jobId}`);
       jobListener.on('value', (snapshot) => {
@@ -416,14 +438,19 @@ const firebaseConfig = {
           state.error = job.status === 'approved'
             ? 'Your print job has been approved and sent to the printer.'
             : 'Your print job was rejected by the admin.';
-          db.ref(`jobs/${state.jobId}`).remove();
+          db.ref(`jobs/${state.jobId}`).remove().catch((error) => {
+            console.error('Failed to remove job:', error);
+          });
           jobListener.off();
           render();
         }
+      }, (error) => {
+        console.error('Job status listener error:', error);
       });
     }
 
     function loadAdminJobs() {
+      if (!db) return;
       db.ref('jobs').orderByChild('status').equalTo('pending').on('value', (snapshot) => {
         const jobs = [];
         snapshot.forEach(child => {
@@ -463,10 +490,15 @@ const firebaseConfig = {
             </table>
           `;
         }
+      }, (error) => {
+        console.error('Load admin jobs error:', error);
+        state.error = 'Failed to load jobs. Please try again.';
+        render();
       });
     }
 
     function approveJob(jobId) {
+      if (!db) return;
       db.ref(`jobs/${jobId}`).once('value', (snapshot) => {
         const job = snapshot.val();
         if (job) {
@@ -477,25 +509,34 @@ const firebaseConfig = {
             color: job.color
           });
           db.ref(`jobs/${jobId}`).update({ status: 'approved' }).then(() => {
-            db.ref(`jobs/${jobId}`).remove().catch(() => {
+            db.ref(`jobs/${jobId}`).remove().catch((error) => {
+              console.error('Failed to remove job:', error);
               state.error = 'Failed to remove job after approval.';
               render();
             });
-          }).catch(() => {
+          }).catch((error) => {
+            console.error('Failed to approve job:', error);
             state.error = 'Failed to approve job.';
             render();
           });
         }
+      }, (error) => {
+        console.error('Approve job fetch error:', error);
+        state.error = 'Failed to fetch job details.';
+        render();
       });
     }
 
     function rejectJob(jobId) {
+      if (!db) return;
       db.ref(`jobs/${jobId}`).update({ status: 'rejected' }).then(() => {
-        db.ref(`jobs/${jobId}`).remove().catch(() => {
+        db.ref(`jobs/${jobId}`).remove().catch((error) => {
+          console.error('Failed to remove job:', error);
           state.error = 'Failed to remove job after rejection.';
           render();
         });
-      }).catch(() => {
+      }).catch((error) => {
+        console.error('Failed to reject job:', error);
         state.error = 'Failed to reject job.';
         render();
       });
@@ -539,9 +580,14 @@ const firebaseConfig = {
           const video = document.getElementById('video');
           if (video) {
             video.srcObject = stream;
+          } else {
+            console.error('Video element not found');
+            state.error = 'Failed to initialize camera preview.';
+            render();
           }
         })
-        .catch(() => {
+        .catch((error) => {
+          console.error('Camera access error:', error);
           state.error = 'Failed to access camera. Please grant permission or check device.';
           state.scanMode = false;
           render();
@@ -559,7 +605,10 @@ const firebaseConfig = {
 
     function captureImage() {
       const video = document.getElementById('video');
-      if (!video) return;
+      if (!video) {
+        console.error('Video element not found for capture');
+        return;
+      }
       const canvas = document.createElement('canvas');
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
@@ -572,7 +621,10 @@ const firebaseConfig = {
 
     function drawCanvas() {
       const canvas = document.getElementById('canvas');
-      if (!canvas) return;
+      if (!canvas) {
+        console.error('Canvas element not found');
+        return;
+      }
       const ctx = canvas.getContext('2d');
       const img = new Image();
       img.src = state.imageData;
@@ -684,7 +736,9 @@ const firebaseConfig = {
     }
 
     function triggerFileUpload() {
-      document.getElementById('fileInput').click();
+      const fileInput = document.getElementById('fileInput');
+      if (fileInput) fileInput.click();
+      else console.error('File input element not found');
     }
 
     function handleFileSelect(input) {
@@ -714,13 +768,15 @@ const firebaseConfig = {
     }
 
     function checkJobStatus() {
-      if (state.jobId) {
+      if (state.jobId && db) {
         db.ref(`jobs/${state.jobId}`).once('value', (snapshot) => {
           const job = snapshot.val();
           if (!job && state.jobStatus === 'pending') {
             state.error = 'Job not found. It may have been processed.';
             render();
           }
+        }, (error) => {
+          console.error('Check job status error:', error);
         });
       }
     }
