--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
           document.body.appendChild(alertContainer);
         }
       }
-      console.log('DOM updated:', app.innerHTML); // Debug DOM content
+      console.log('DOM updated:', app.innerHTML);
     }
 
     // Firebase functions
