--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Internet Cafe Printing & Copying Machine</title>
+  <!-- jsPDF Library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {
       background: linear-gradient(135deg, #e0e7ff, #f3f4f6);
@@ -212,7 +214,12 @@
 
     // Render function
     function render() {
+      console.log('Rendering screen:', state.screen);
       const app = document.getElementById('app');
+      if (!app) {
+        console.error('App container not found');
+        return;
+      }
       app.innerHTML = '';
       if (state.screen === 'menu') {
         app.innerHTML = `
@@ -221,6 +228,7 @@
           <button class="btn-blue" onclick="selectService('copy')" aria-label="Select Copy Service">Copy</button>
           <button class="btn-blue" onclick="selectService('scan')" aria-label="Select Scan Service">Scan</button>
         `;
+        console.log('Main menu rendered with Print, Copy, and Scan buttons');
       } else if (state.screen === 'options') {
         app.innerHTML = `
           <h2 class="capitalize">${state.service} Options</h2>
@@ -342,6 +350,10 @@
           const video = document.getElementById('video');
           if (video) {
             video.srcObject = stream;
+          } else {
+            console.error('Video element not found');
+            state.error = 'Failed to initialize camera preview.';
+            render();
           }
         })
         .catch(() => {
@@ -362,7 +374,10 @@
 
     function captureImage() {
       const video = document.getElementById('video');
-      if (!video) return;
+      if (!video) {
+        console.error('Video element not found for capture');
+        return;
+      }
       const canvas = document.createElement('canvas');
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
@@ -375,7 +390,10 @@
 
     function drawCanvas() {
       const canvas = document.getElementById('canvas');
-      if (!canvas) return;
+      if (!canvas) {
+        console.error('Canvas element not found');
+        return;
+      }
       const ctx = canvas.getContext('2d');
       const img = new Image();
       img.src = state.imageData;
@@ -429,9 +447,42 @@
       img.onload = () => {
         ctx.drawImage(img, state.crop.x, state.crop.y, state.crop.width, state.crop.height, 0, 0, state.crop.width, state.crop.height);
         state.imageData = canvas.toDataURL('image/png');
-        state.file = 'scanned_image.png';
-        state.fileUploaded = true;
-        render();
+        console.log('Cropped image generated:', state.imageData.substring(0, 50) + '...');
+
+        // Convert cropped image to PDF using jsPDF
+        const { jsPDF } = window.jspdf;
+        if (!jsPDF) {
+          console.error('jsPDF library not loaded');
+          state.error = 'Failed to convert image to PDF. Please try again.';
+          render();
+          return;
+        }
+        const pdf = new jsPDF({
+          orientation: 'portrait',
+          unit: 'mm',
+          format: 'a4'
+        });
+        const pdfWidth = pdf.internal.pageSize.getWidth();
+        const pdfHeight = pdf.internal.pageSize.getHeight();
+        const imgWidth = state.crop.width;
+        const imgHeight = state.crop.height;
+        const ratio = Math.min(pdfWidth / imgWidth, pdfHeight / imgHeight);
+        const scaledWidth = imgWidth * ratio;
+        const scaledHeight = imgHeight * ratio;
+        const x = (pdfWidth - scaledWidth) / 2;
+        const y = (pdfHeight - scaledHeight) / 2;
+
+        try {
+          pdf.addImage(state.imageData, 'PNG', x, y, scaledWidth, scaledHeight);
+          state.file = 'scanned_image.pdf';
+          state.fileUploaded = true;
+          console.log('PDF generated for file:', state.file);
+          render();
+        } catch (error) {
+          console.error('Error converting image to PDF:', error);
+          state.error = 'Failed to convert image to PDF. Please try again.';
+          render();
+        }
       };
     }
 
@@ -481,7 +532,9 @@
     }
 
     function triggerFileUpload() {
-      document.getElementById('fileInput').click();
+      const fileInput = document.getElementById('fileInput');
+      if (fileInput) fileInput.click();
+      else console.error('File input element not found');
     }
 
     function handleFileSelect(input) {
@@ -515,7 +568,7 @@
       calculateCost();
       if (state.service === 'print' && state.imageData) {
         console.log('Printing:', {
-          image: state.imageData,
+          file: state.file,
           copies: state.copies,
           color: state.color
         });
