--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                   <button class="btn-gray" onclick="stopCamera()" aria-label="Stop Camera">Cancel</button>
                 </div>
               </div>
-            ` : state.imageData ? `
+            ` : state.imageData && !state.fileUploaded ? `
               <div class="form-group">
                 <label>Captured Image:</label>
                 <div class="crop-container">
@@ -255,6 +255,19 @@
                   <button class="btn-gray" onclick="retakeImage()" aria-label="Retake Image">Retake</button>
                 </div>
               </div>
+            ` : state.fileUploaded && state.imageData ? `
+              <div class="form-group">
+                <label>Preview:</label>
+                <canvas id="canvas"></canvas>
+              </div>
+              <div class="form-group">
+                <label>Number of Copies:</label>
+                <input type="number" id="copies" value="${state.copies}" min="1" onchange="updateCopies(this.value)" aria-label="Number of Copies">
+              </div>
+              <div class="flex">
+                <button class="btn-gray" onclick="retakeImage()" aria-label="Retake Image">Retake</button>
+                <button class="btn-green" onclick="confirmTransaction()" aria-label="Print Document">Print</button>
+              </div>
             ` : `
               <div class="form-group">
                 <label>Choose Input Method:</label>
@@ -266,7 +279,7 @@
               </div>
             `}
           ` : ''}
-          ${state.service !== 'scan' && (state.service !== 'print' || state.fileUploaded) ? `
+          ${state.service !== 'scan' && (state.service !== 'print' || (state.fileUploaded && !state.imageData)) ? `
             <div class="form-group">
               <label>Number of Copies:</label>
               <input type="number" id="copies" value="${state.copies}" min="1" onchange="updateCopies(this.value)" aria-label="Number of Copies">
@@ -278,8 +291,6 @@
                 <option value="color" ${state.color === 'color' ? 'selected' : ''}>Color</option>
               </select>
             </div>
-          ` : ''}
-          ${state.service !== 'print' || !state.scanMode && !state.imageData ? `
             <div class="flex">
               <button class="btn-gray" onclick="setScreen('menu')" aria-label="Back to Menu">Back</button>
               <button class="btn-green" onclick="confirmTransaction()" aria-label="Confirm Transaction">Confirm</button>
@@ -290,7 +301,7 @@
           startVideoStream();
         } else if (state.service === 'print' && state.imageData) {
           drawCanvas();
-          setupCropHandles();
+          if (!state.fileUploaded) setupCropHandles();
         }
       } else if (state.screen === 'summary') {
         app.innerHTML = `
@@ -401,9 +412,11 @@
         canvas.width = img.width;
         canvas.height = img.height;
         ctx.drawImage(img, 0, 0);
-        ctx.strokeStyle = '#2563eb';
-        ctx.lineWidth = 2;
-        ctx.strokeRect(state.crop.x, state.crop.y, state.crop.width, state.crop.height);
+        if (!state.fileUploaded) {
+          ctx.strokeStyle = '#2563eb';
+          ctx.lineWidth = 2;
+          ctx.strokeRect(state.crop.x, state.crop.y, state.crop.width, state.crop.height);
+        }
       };
     }
 
@@ -489,6 +502,8 @@
     function retakeImage() {
       state.imageData = null;
       state.crop = { x: 0, y: 0, width: 0, height: 0 };
+      state.file = null;
+      state.fileUploaded = false;
       startCamera();
     }
 
@@ -498,6 +513,8 @@
       state.error = '';
       state.scanMode = false;
       state.imageData = null;
+      state.file = null;
+      state.fileUploaded = false;
       if (videoStream) {
         videoStream.getTracks().forEach(track => track.stop());
         videoStream = null;
@@ -566,7 +583,7 @@
         return;
       }
       calculateCost();
-      if (state.service === 'print' && state.imageData) {
+      if (state.service === 'print' && state.file) {
         console.log('Printing:', {
           file: state.file,
           copies: state.copies,
